# moonshot

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  plan.md  pyproject.toml
bench/: README.md  inspect.sh
csrc/: README.md
csrc/include/moonshot/: bench.cuh  check.cuh  verify.hpp
csrc/ops/template/: README.md  template_op.cu
docs/: ai-collaboration.md  architecture.md  hardware-and-measurement.md  llms.txt  overview.md  roadmap.md
docs/decisions/: 0001-clean-agentic-restart.md  0002-multi-arch-portability.md  0003-kernel-design-portable-structure.md
docs/kernels/: README.md
moonshot/: __init__.py  device.py  engine.py  ops.py
scripts/: inspect.sh
src/common/: bench.hpp  verify.hpp
src/cuda/: CMakeLists.txt
src/cuda/gemm/: CMakeLists.txt  bench.cuh  gemm_cublas.cuh
src/cuda/gemm/bf16/: gemm.cu  kernel_0.cuh  kernel_1.cuh
src/cuda/gemm/fp32/: gemm.cu  kernel_0.cuh  kernel_1.cuh  kernel_2.cuh  kernel_3.cuh  kernel_4.cuh  kernel_5.cuh  study.cuh
src/cuda/utils/: utils.h
