[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moonshot"
version = "0.0.0"
description = "A from-scratch LLM inference engine for Ampere, built kernel-up."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.4",
]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.setuptools.packages.find]
include = ["moonshot*"]

# The CUDA custom ops under csrc/ are compiled via torch's cpp_extension. Architecture is not
# hard-coded: torch auto-detects the current GPU's compute capability, or you override with
#   TORCH_CUDA_ARCH_LIST="7.5 8.0 8.6 8.9 9.0"   # Turing … Hopper, a portable fatbin
# Kernels self-guard arch-specific features (__CUDA_ARCH__) and dispatch falls back at runtime
# on unsupported devices (moonshot/device.py). Until a kernel lands, `moonshot.ops` runs
# entirely on pure-torch fallbacks, so the package imports and the engine runs on any torch
# backend (CUDA incl. ROCm, or CPU) without a compiled extension. See docs/architecture.md.
